<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="16dp"
        android:text="@string/no_internet_access"
        android:textSize="24sp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/broken_tv"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        app:srcCompat="@drawable/ic_no_internet_access_dark" />

    <TextView
        android:id="@+id/check_your_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/broken_tv"
        android:layout_centerInParent="true"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/no_internet_description"
        android:textAlignment="center"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/check_your_connection"
        android:layout_centerInParent="true"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="onClick"
            android:text="@string/settings"
            android:textColor="@color/white"
            app:backgroundTint="@color/colorButtonPrimary"
            app:elevation="10dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="onClick"
            android:text="@string/exit"
            android:textColor="@color/white"
            app:backgroundTint="@color/colorButtonPrimary"
            app:elevation="10dp" />
    </LinearLayout>
</RelativeLayout>