<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/gray_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_marginTop="16dp"
        android:textSize="24sp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/no_internet_access"/>

    <ImageView
        android:layout_margin="16dp"
        android:id="@+id/broken_tv"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:background="@drawable/ic_no_internet_access_light"
        tools:ignore="ContentDescription" />

    <TextView
        android:textAlignment="center"
        android:gravity="center"
        android:id="@+id/check_your_connection"
        android:layout_margin="16dp"
        android:layout_below="@+id/broken_tv"
        android:layout_centerInParent="true"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_internet_description"/>


    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_below="@id/check_your_connection"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:elevation="10dp"
            android:textColor="@color/white"
            android:layout_margin="5dp"
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/Button_Primary"
            android:onClick="onClick"
            android:text="Settings"
            tools:ignore="ButtonStyle" />

        <Button
            android:elevation="10dp"
            android:textColor="@color/white"
            android:layout_margin="5dp"
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/Button_Primary"
            android:onClick="onClick"
            android:text="@string/exit"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</RelativeLayout>