<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="5dp"
        app:cardBackgroundColor="@color/colorGray"
        app:cardCornerRadius="4dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnModeChange"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_centerInParent="true"
            android:layout_gravity="end"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="8dp"
            app:srcCompat="@drawable/ic_ui_mode_change"
            app:tint="@color/colorDarkGray" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/HelloThere"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:drawableStart="@drawable/ic_circle"
            android:drawableLeft="@drawable/ic_circle"
            android:drawablePadding="8dp"
            android:padding="5dp"
            android:text="@string/Copy_link_tiktok"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="10dp"
            android:drawableStart="@drawable/ic_circle"
            android:drawableLeft="@drawable/ic_circle"
            android:drawablePadding="8dp"
            android:padding="5dp"
            android:text="@string/Copy_link_tiktok_2"
            android:textAlignment="center"
            android:textColor="@color/black" />
    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.23"
        android:background="@color/white">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/TikTokBtn"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_open_tiktok_light" />

    </RelativeLayout>
</LinearLayout>